--- a/app/views/factory/admin/products/_form.html.erb
+++ b/app/views/factory/admin/products/_form.html.erb
@@ -1,5 +1,5 @@
 <%= f.collection_select :brand_id, @brands, :id, :name, include_blank: true if @brands.present? %>
-<%= f.text_field :name, required: true %>
+<%= f.text_field :name, required: true, autofocus: true %>
 <%= f.file_field :logo %>
 <%= f.text_area :description %>
 <%= f.number_field :base_price %>
