--- a/app/views/factory/admin/base/_taxon_bar.html.erb
+++ b/app/views/factory/admin/base/_taxon_bar.html.erb
@@ -43,7 +43,7 @@
     <li class="<%= active_helper(controllers: 'provides', active: 'is-active') %>">
       <%= link_to({ controller: 'taxon/provides', taxon_id: @taxon.id }) do %>
         <i class="fa-solid fa-building"></i>
-        <span class="ml-1"><%= t('.provides.index.title') %></span>
+        <span class="ml-1"><%= t('factory.admin.taxon.provides.index.title') %></span>
       <% end %>
     </li>
   </ul>
