fix provide settings

--- a/app/views/factory/admin/production_provides/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/production_provides/_base/_index_thead.html.erb
@@ -4,6 +4,5 @@
   <p><%= Factory::ProductionProvide.human_attribute_name(:upstream_product_id) %></p>
 </th>
 <th><%= Factory::ProductionProvide.human_attribute_name(:cost_price) %></th>
-<th><%= Factory::ProductionProvide.human_attribute_name(:verified) %></th>
-<th><%= Factory::ProductionProvide.human_attribute_name(:selected) %></th>
+<th><%= Factory::ProductionProvide.human_attribute_name(:default) %></th>
 <th><%= Factory::ProductionProvide.human_attribute_name(:created_at) %></th>
