--- a/app/views/factory/admin/taxon/provides/index.html.erb
+++ b/app/views/factory/admin/taxon/provides/index.html.erb
@@ -3,7 +3,11 @@
 <%= render 'index_actions' %>
 
 <%= render layout: 'index_table' do %>
-  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @provides, as: :model %>
-  <%= render partial: 'provider_tbody', layout: 'provider_tr', collection: @providers, as: :model %>
-  <%= render partial: 'vendor_tbody', layout: 'vendor_tr', collection: @vendors, as: :model %>
+  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @production_provides, as: :model %>
 <% end %>
+
+<%= render layout: 'provide_table' do %>
+  <%= render partial: 'provide_tbody', layout: 'provide_tr', collection: @provides, as: :model %>
+<% end %>
+
+<%= paginate @provides %>
