--- a/app/views/factory/admin/taxon/provides/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/taxon/provides/_index/_index_tr.html.erb
@@ -5,7 +5,7 @@
       <%= button_to({ controller: 'production_provides', action: 'show', provide_id: model.provide_id, id: model.id }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-circle-info text-info"></i>
       <% end %>
-      <%= button_to({ action: 'edit', id: model.id }, aria: { label: t('.edit.title') }, class: 'button is-small is-rounded is-light') do %>
+      <%= button_to({ controller: 'production_provides', action: 'edit', provide_id: model.provide_id, id: model.id }, aria: { label: t('.edit.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-pencil text-link"></i>
       <% end %>
       <%= button_to({ action: 'destroy', id: model.id }, method: :delete, class: 'button is-small is-rounded is-light', form: { data: { turbo_confirm: t('.destroy.confirm') } }) do %>
