--- a/app/views/factory/admin/taxon/provides/_index/_provide_tr.html.erb
+++ b/app/views/factory/admin/taxon/provides/_index/_provide_tr.html.erb
@@ -2,8 +2,13 @@
   <%= yield %>
   <td>
     <div data-show-target="item" class="has-inline-centered visibility-hidden">
-      <%= button_to({ action: 'show', id: model.id }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
+      <%= button_to({ action: 'show', id: model.id }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-circle-info text-info"></i>
+        <span class="ml-1"><%= t('.show.title') %></span>
+      <% end %>
+      <%= button_to({ controller: 'production_provides', provide_id: model.id, action: 'create' }, params: { production_provide: { taxon_id: @taxon.id } }, class: 'button is-small is-rounded is-light') do %>
+        <i class="fa-solid fa-cart-flatbed text-success"></i>
+        <span class="ml-1"><%= t('.production_provides.create.title') %></span>
       <% end %>
     </div>
   </td>
