--- a/app/views/factory/admin/taxon/provides/_index/_provide_table.html.erb
+++ b/app/views/factory/admin/taxon/provides/_index/_provide_table.html.erb
@@ -5,7 +5,7 @@
       <th style="min-width: 18em">操作</th>
     </tr>
   </thead>
-  <tbody id="tbody">
+  <tbody>
     <%= yield %>
   </tbody>
 </table>
