--- a/app/views/factory/admin/taxon/provides/_index/_provide_tr.html.erb
+++ b/app/views/factory/admin/taxon/provides/_index/_provide_tr.html.erb
@@ -1,4 +1,4 @@
-<tr id="tr_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
+<tr id="provide_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <%= yield %>
   <td>
     <div data-show-target="item" class="has-inline-centered visibility-hidden">
