--- a/app/views/admin/_purchase_cart_assign.html.erb
+++ b/app/views/admin/_purchase_cart_assign.html.erb
@@ -38,6 +38,7 @@
         <%= f.hidden_field :good_type %>
         <%= f.hidden_field :purchase_id %>
         <%= f.hidden_field :good_id %>
+        <%= f.hidden_field :provide_id %>
         <%= button_tag do %>
           <i class="fa-solid fa-circle-plus fa-xl text-dark-grey"></i>
         <% end %>
