--- a/app/views/factory/admin/products/_buy/_production.html.erb
+++ b/app/views/factory/admin/products/_buy/_production.html.erb
@@ -12,6 +12,6 @@
       <td><%= pp.cost_price.to_money.format.html_safe %></td>
     </tr>
   <% end %>
-  <%= render partial: 'purchase_cart_assign', locals: { model: model, cart: @cart, item: @cart.init_cart_item(params, purchase_id: model.id, good_id: nil) } %>
+  <%= render partial: 'purchase_cart_assign', locals: { model: model, cart: @cart, item: @cart.init_cart_item(params, provide_id: nil, purchase_id: model.id, good_id: nil) } %>
   </table>
 </td>
