--- a/app/views/factory/admin/products/_buy/_item_tr.html.erb
+++ b/app/views/factory/admin/products/_buy/_item_tr.html.erb
@@ -1,3 +1,3 @@
-<tr id="tr_<%= model.product_id %>_<%= model.id %>">
+<tr id="tr_<%= model.product_id %>_<%= model.id %>" class="left-border">
   <%= yield %>
 </tr>
