--- a/app/views/factory/admin/products/_buy/_production_tr.html.erb
+++ b/app/views/factory/admin/products/_buy/_production_tr.html.erb
@@ -3,4 +3,4 @@
 </tr>
 <%= render partial: 'production_provide', layout: 'item_tr', collection: model.production_provides, as: :pp, locals: { model: model } %>
 <%= render partial: 'production_item', layout: 'item_tr', collection: @cart.find_items_except_provide(model.production_provides.pluck(:provide_id), purchase_id: model.id, good_id: nil), as: :item, locals: { model: model } %>
-<%= render partial: 'production_item_new', layout: 'item_tr', locals: { model: model } %>
+<%= render partial: 'purchase_cart_assign', locals: { model: model, cart: @cart, item: @cart.init_cart_item(params, provide_id: nil, purchase_id: model.id, good_id: nil) } %>
