--- a/app/views/admin/_purchase_cart_assign.html.erb
+++ b/app/views/admin/_purchase_cart_assign.html.erb
@@ -1,12 +1,12 @@
 <% if item.persisted? %>
-  <tr id="<%= item.cart_identity %>" class="left-border">
+<tr id="<%= item.cart_identity %>" class="left-border">
   <td data-controller="modify" data-modify-submit-value="true" >
     <div class="has-inline-centered">
       <%= button_to({ controller: 'factory/in/items', action: 'destroy', id: item.id }, method: :delete, params: { current_cart_id: @cart&.id }, class: 'mr-1') do %>
         <i class="fa-solid fa-xl fa-circle-xmark text-dark-grey"></i>
       <% end %>
       <button data-action="modify#minus" class="button_to mr-1"<%= 'disabled' if item.number <= 1 %>>
-        <i class="fa-solid fa-xl fa-circle-minus text-dark-grey"></i>
+        <i class="fa-solid fa-xl fa-circle-minus <%= item.number <= 1 ? 'text-grey' : 'text-dark-grey' %>"></i>
       </button>
       <%= form_with(theme: nil, scope: :item, url: { controller: 'factory/in/items', action: 'update', id: item.id }, method: :patch, data: { controller: 'input' }) do |f| %>
         <%= f.hidden_field :current_cart_id, value: cart.id %>
@@ -31,20 +31,20 @@
       <span class="ml-1"><%= t('factory.in.items.edit_assign.title') %></span>
     <% end %>
   </td>
-  </tr>
+</tr>
 <% else %>
-  <tr id="<%= item.cart_identity %>" class="left-border">
-    <td colspan="3">
-      <%= form_with theme: nil, model: item, scope: '', url: { controller: 'factory/in/items', action: 'create' }, class: 'button_to' do |f| %>
-        <%= f.hidden_field :current_cart_id, value: cart.id %>
-        <%= f.hidden_field :good_type %>
-        <%= f.hidden_field :purchase_id %>
-        <%= f.hidden_field :good_id %>
-        <%= f.hidden_field :provide_id %>
-        <%= button_tag do %>
-          <i class="fa-solid fa-circle-plus fa-xl text-dark-grey"></i>
-        <% end %>
+<tr id="<%= item.cart_identity %>" class="left-border">
+  <td colspan="3">
+    <%= form_with theme: nil, model: item, scope: '', url: { controller: 'factory/in/items', action: 'create' }, class: 'button_to' do |f| %>
+      <%= f.hidden_field :current_cart_id, value: cart.id %>
+      <%= f.hidden_field :good_type %>
+      <%= f.hidden_field :purchase_id %>
+      <%= f.hidden_field :good_id %>
+      <%= f.hidden_field :provide_id %>
+      <%= button_tag do %>
+        <i class="fa-solid fa-circle-plus fa-xl text-dark-grey"></i>
       <% end %>
-    </td>
-  </tr>
+    <% end %>
+  </td>
+</tr>
 <% end %>
