--- a/app/views/factory/admin/products/_buy/_index_tfoot.html.erb
+++ b/app/views/factory/admin/products/_buy/_index_tfoot.html.erb
@@ -1,11 +1,9 @@
 <div class="level box sticky-bottom">
   <div class="level-left">
-    <div id="cart_nav">
-      <%= link_to({ controller: 'trade/in/carts', action: 'show', id: @cart.id }) do %>
-        <i class="fa-solid fa-cart-shopping"></i>
-      <% end %>
-      <%= @cart.amount.to_money.format.html_safe %>
-    </div>
+    <%= link_to({ controller: 'trade/in/carts', action: 'show', id: @cart.id }, id: 'cart_nav', class: 'button is-link') do %>
+      <i class="fa-solid fa-cart-shopping"></i>
+      <span class="ml-1"><%= @cart.amount.to_money.format.html_safe %></span>
+    <% end %>
   </div>
   <div class="level-right">
     <%= link_to({ controller: 'trade/in/orders', action: 'cart', current_cart_id: @cart.id, **params.permit!.slice('factory_taxon_id') }, class: 'button is-success') do %>
