--- a/app/views/factory/admin/products/_buy/_index_thead.html.erb
+++ b/app/views/factory/admin/products/_buy/_index_thead.html.erb
@@ -1,6 +1,6 @@
-<th><%= Factory::Product.human_attribute_name(:name) %></th>
-<th><%= Factory::Production.human_attribute_name(:price) %></th>
-<th><%= Factory::Production.human_attribute_name(:cost_price) %></th>
-<th></th>
-<th></th>
-<th></th>
+<th style="width: 30%"><%= Factory::Product.human_attribute_name(:name) %></th>
+<th style="width: 10%"><%= Factory::Production.human_attribute_name(:price) %></th>
+<th style="width: 10%"><%= Factory::Production.human_attribute_name(:cost_price) %></th>
+<th style="width: 20%"></th>
+<th style="width: 20%"><%= Trade::Item.human_attribute_name(:provide_id) %></th>
+<th style="width: 10%"><%= Trade::Item.human_attribute_name(:single_price) %></th>
