--- a/app/views/factory/admin/productions/_base/_index_tr.html.erb
+++ b/app/views/factory/admin/productions/_base/_index_tr.html.erb
@@ -27,7 +27,7 @@
       <% end %>
     </div>
     <div data-show-target="item" class="visibility-hidden">
-      <%= link_to({ controller: 'production_provides', production_id: model.id }, class: 'button is-small is-rounded is-light') do %>
+      <%= link_to({ controller: 'production/provides', production_id: model.id }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-building text-info"></i>
         <span class="ml-1"><%= t('.production_provides.index.title') %></span>
       <% end %>
