--- a/app/views/factory/admin/taxon/provides/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/taxon/provides/_index/_index_tbody.html.erb
@@ -1,8 +1,7 @@
 <td><%= model.provide.name %></td>
 <td>
-  <%= form_with theme: nil, model: model, url: { controller: 'production_provides', action: 'update', provide_id: model.provide_id, id: model.id }, data: { controller: 'input' } do |f| %>
-    <%= f.check_box :default, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
-    <label data-action="click->input#check"></label>
-  <% end %>
+<% if model.provide.provider %>
+  <%= model.provide.provider.name %>
+<% end %>
 </td>
 <td><time data-controller="time"><%= model.created_at.to_fs(:iso8601) %></time></td>
