--- a/app/views/factory/admin/taxon/productions/_provides/_index_thead.html.erb
+++ b/app/views/factory/admin/taxon/productions/_provides/_index_thead.html.erb
@@ -1,7 +1,4 @@
 <th></th>
-<th colspan="2">
-  <p><%= Factory::Production.human_attribute_name(:name) %></p>
-  <p><%= Factory::Production.human_attribute_name(:qr_code) %></p>
-</th>
+<th colspan="2"><%= Factory::Production.human_attribute_name(:name) %></th>
 <th><%= Factory::ProductionProvide.human_attribute_name(:provide_id) %></th>
 <th><%= Factory::ProductionProvide.human_attribute_name(:cost_price) %></th>
