--- a/app/views/factory/admin/taxon/productions/_provides/_index_tbody.html.erb
+++ b/app/views/factory/admin/taxon/productions/_provides/_index_tbody.html.erb
@@ -1,10 +1,4 @@
-<td>
-  <%= link_to({ action: 'show', id: model.id, product_id: model.product_id }, class: 'is-several') do %>
-    <%= image_tag model.logo, class: 'image is-24x24' if model.logo.attached? %>
-    <span><%= model.title %></span>
-  <% end %>
-  <p class="text-grey"><%= model.qr_code %></p>
-</td>
+<td><%= model.name %></td>
 <td class="has-inner-table">
   <% model.parts.each do |part| %>
     <%= button_to({ controller: 'productions', action: 'show', product_id: part.product_id, id: part.id }, class: 'tag is-info') do %>
