--- a/app/views/factory/admin/taxon/provides/_form.html.erb
+++ b/app/views/factory/admin/taxon/provides/_form.html.erb
@@ -1,4 +1,4 @@
 <%= f.text_field :name, required: true, autofocus: true %>
-<%= f.fields :production_provides do |ef| %>
+<%= f.fields :taxon_provides do |ef| %>
   <%= ef.hidden_field :taxon_id, value: @taxon.id %>
 <% end %>
