--- a/app/views/factory/admin/taxon/provides/index.html.erb
+++ b/app/views/factory/admin/taxon/provides/index.html.erb
@@ -3,7 +3,7 @@
 <%= render 'index_actions' %>
 
 <%= render layout: 'index_table' do %>
-  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @production_provides, as: :model %>
+  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @taxon_provides, as: :model %>
 <% end %>
 
 <%= render layout: 'provide_table' do %>
