--- a/app/views/factory/admin/home/index.html+phone.erb
+++ b/app/views/factory/admin/home/index.html+phone.erb
@@ -1,12 +1,3 @@
-<div class="box is-padding-less">
-  <div class="weui-panel__hd">
-    <%= t('factory.admin.title') %>
-  </div>
-  <div class="weui-panel__bd">
-    <div class="weui-media-box weui-media-box_small-appmsg">
-      <div class="weui-cells">
-        <%= render 'index_item' %>
-      </div>
-    </div>
-  </div>
+<div class="box fixed-grid has-2-cols">
+  <%= render 'index_column' %>
 </div>
