share some resources

--- a/app/views/factory/admin/products/buy.html+phone.erb
+++ b/app/views/factory/admin/products/buy.html+phone.erb
@@ -1,7 +1,7 @@
 <%= render 'filter_form' %>
 
 <div class="weui-menu">
-  <%= render 'menu' %>
+  <%= render 'taxon_menu' %>
   <div
     data-controller="page"
     data-page-debug-value="true"
