--- a/app/views/factory/admin/product/provides/_index/_provide_tr.html.erb
+++ b/app/views/factory/admin/product/provides/_index/_provide_tr.html.erb
@@ -6,9 +6,9 @@
         <i class="fa-solid fa-circle-info text-info"></i>
         <span class="ml-1"><%= t('.show.title') %></span>
       <% end %>
-      <%= button_to({ controller: 'production_provides', provide_id: model.id, action: 'create' }, params: { production_provide: { product_id: @product.id } }, class: 'button is-small is-rounded is-light') do %>
+      <%= button_to({ controller: 'product_provides', provide_id: model.id, action: 'create' }, params: { product_provide: { product_id: @product.id } }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-cart-flatbed text-success"></i>
-        <span class="ml-1"><%= t('.production_provides.create.title') %></span>
+        <span class="ml-1"><%= t('.product_provides.create.title') %></span>
       <% end %>
     </div>
   </td>
