--- a/app/views/factory/admin/product/provides/index.html.erb
+++ b/app/views/factory/admin/product/provides/index.html.erb
@@ -3,10 +3,7 @@
 <%= render 'index_actions' %>
 
 <%= render layout: 'index_table' do %>
-  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @production_provides, as: :model %>
-<% end %>
-
-<%= render layout: 'provide_table' do %>
+  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @product_provides, as: :model %>
   <%= render partial: 'provide_tbody', layout: 'provide_tr', collection: @provides, as: :model %>
 <% end %>
 
