--- a/app/views/factory/admin/production_provides/_base/_index_tr.html.erb
+++ b/app/views/factory/admin/production_provides/_base/_index_tr.html.erb
@@ -1,4 +1,4 @@
-<tr id="tr_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
+<tr id="tr_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide" class="background-success-light">
   <%= yield %>
   <td>
     <div data-show-target="item" class="visibility-hidden">
