--- a/app/views/factory/admin/production/provides/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/production/provides/_index/_index_tbody.html.erb
@@ -5,4 +5,5 @@
 <% end %>
 </td>
 <td><%= model.cost_price %></td>
+<td><%= model.provide_config_type_i18n %></td>
 <td><time data-controller="time"><%= model.created_at.to_fs(:iso8601) %></time></td>
