--- a/app/views/factory/admin/taxon/provides/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/taxon/provides/_index/_index_tr.html.erb
@@ -2,13 +2,13 @@
   <%= yield %>
   <td>
     <div data-show-target="item" class="has-inline-centered visibility-hidden">
-      <%= button_to({ controller: 'taxon_provides', action: 'show', provide_id: model.provide_id, id: model.id }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
+      <%= button_to({ controller: 'taxon_provides', action: 'show', id: model.id }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-circle-info text-info"></i>
       <% end %>
-      <%= button_to({ controller: 'taxon_provides', action: 'edit', provide_id: model.provide_id, id: model.id }, aria: { label: t('.edit.title') }, class: 'button is-small is-rounded is-light') do %>
+      <%= button_to({ controller: 'taxon_provides', action: 'edit', id: model.id }, aria: { label: t('.edit.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-pencil text-link"></i>
       <% end %>
-      <%= button_to({ controller: 'taxon_provides', action: 'destroy', provide_id: model.provide_id, id: model.id }, method: :delete, class: 'button is-small is-rounded is-light', form: { data: { turbo_confirm: t('.destroy.confirm') } }) do %>
+      <%= button_to({ controller: 'taxon_provides', action: 'destroy', id: model.id }, method: :delete, class: 'button is-small is-rounded is-light', form: { data: { turbo_confirm: t('.destroy.confirm') } }) do %>
         <i class="fa-solid fa-trash text-danger"></i>
         <span class="ml-1"><%= t('.destroy.title') %></span>
       <% end %>
