--- a/app/views/factory/admin/product/provides/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/product/provides/_index/_index_tbody.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 </td>
 <td>
-  <%= form_with theme: nil, model: model, url: { controller: 'product_provides', action: 'update', provide_id: model.provide_id, id: model.id }, data: { controller: 'input' } do |f| %>
+  <%= form_with theme: nil, model: model, url: { controller: 'product_provides', action: 'update', taxon_id: model.product.taxon_id, id: model.id }, data: { controller: 'input' } do |f| %>
     <%= f.check_box :default, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
     <label data-action="click->input#check"></label>
   <% end %>
