--- a/app/views/factory/admin/product/provides/_index/_provide_tr.html.erb
+++ b/app/views/factory/admin/product/provides/_index/_provide_tr.html.erb
@@ -6,7 +6,7 @@
         <i class="fa-solid fa-circle-info text-info"></i>
         <span class="ml-1"><%= t('.show.title') %></span>
       <% end %>
-      <%= button_to({ controller: 'product_provides', provide_id: model.id, taxon_id: @product.taxon_id, action: 'create' }, params: { product_provide: { product_id: @product.id } }, class: 'button is-small is-rounded is-light') do %>
+      <%= button_to({ controller: 'product_provides', action: 'create' }, params: { product_provide: { provide_id: model.id } }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-cart-flatbed text-success"></i>
         <span class="ml-1"><%= t('.product_provides.create.title') %></span>
       <% end %>
