--- a/app/views/factory/admin/taxon/productions/_provides/_index_tr.html.erb
+++ b/app/views/factory/admin/taxon/productions/_provides/_index_tr.html.erb
@@ -2,11 +2,9 @@
   <%= yield %>
   <td>
     <div data-show-target="item" class="visibility-hidden">
-      <%= button_to({ action: 'show', id: model.id, product_id: model.product_id }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-solid fa-circle-info text-info"></i>
-      <% end %>
-      <%= button_to({ action: 'edit', id: model.id, product_id: model.product_id }, aria: { label: t('.edit.title') }, class: 'button is-small is-rounded is-light') do %>
+      <%= button_to({ action: 'new', production_id: model.id }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-pencil text-info"></i>
+        <span class="ml-1"><%= t('.production_provides.new.title') %></span>
       <% end %>
     </div>
   </td>
