--- a/app/views/factory/admin/taxon/productions/_provides/_index_tr.html.erb
+++ b/app/views/factory/admin/taxon/productions/_provides/_index_tr.html.erb
@@ -2,7 +2,7 @@
   <%= yield %>
   <td>
     <div data-show-target="item" class="visibility-hidden">
-      <%= button_to({ action: 'new', production_id: model.id }, class: 'button is-small is-rounded is-light') do %>
+      <%= button_to({ controller: 'production_provides', action: 'new', production_id: model.id }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-pencil text-info"></i>
         <span class="ml-1"><%= t('.production_provides.new.title') %></span>
       <% end %>
