--- a/app/views/factory/admin/production/provides/index.html.erb
+++ b/app/views/factory/admin/production/provides/index.html.erb
@@ -4,7 +4,7 @@
 
 <%= render layout: 'index_table' do %>
   <tbody id="tbody">
-    <%= render partial: 'index_tbody', layout: 'index_tr', collection: @production_provides, as: :model %>
+    <%= render partial: 'factory/admin/production_provides/_base/index_tbody', layout: 'factory/admin/production_provides/_base/index_tr', collection: @production_provides, as: :model %>
   </tbody>
   <tbody>
     <%= render partial: 'provide_tbody', layout: 'provide_tr', collection: @provides, as: :model %>
