--- a/app/views/factory/admin/production_provides/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/production_provides/_base/_index_tbody.html.erb
@@ -7,7 +7,7 @@
 <td><%= model.cost_price.to_money.format.html_safe %></td>
 <td><%= model.provide_config_type_i18n %></td>
 <td>
-  <%= form_with theme: nil, model: model, url: { controller: 'production_provides', action: 'update', provide_id: model.provide_id, id: model.id }, data: { controller: 'input' } do |f| %>
+  <%= form_with theme: nil, model: model, url: { controller: 'production_provides', action: 'refresh', id: model.id }, data: { controller: 'input' } do |f| %>
     <%= f.check_box :default, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
     <label data-action="click->input#check"></label>
   <% end %>
