--- a/app/views/factory/admin/production_plans/update.turbo_stream.erb
+++ b/app/views/factory/admin/production_plans/update.turbo_stream.erb
@@ -1,7 +1,7 @@
-<% if referer_controller == controller_path && referer_meta[:action] == 'index' %>
+<% if referer_eql? controller_path, 'index' %>
   <%= turbo_stream.replace "tr_#{params[:id]}", partial: 'index_tbody', layout: 'index_tr', locals: { model: @production_plan } %>
   <%= turbo_stream.remove 'modal' %>
-<% elsif referer_controller == controller_path && referer_meta[:action] == 'edit' %>
+<% elsif referer_eql? controller_path, 'edit' %>
   <%= turbo_stream.append 'body', partial: 'visit', locals: { url: url_for(action: 'show') } %>
 <% elsif referer_controller == 'factory/admin/produce_plans' %>
   <%= turbo_stream.update "tr_#{@production_plan.id}", partial: "#{referer_path}/index_tbody", locals: { model: @production_plan } %>
