--- a/app/views/factory/admin/production_provides/create.turbo_stream.erb
+++ b/app/views/factory/admin/production_provides/create.turbo_stream.erb
@@ -1,2 +1,6 @@
-<%= turbo_stream.append 'tbody', partial: 'index_tbody', layout: 'index_tr', locals: { model: @production_provide } %>
-<%= turbo_stream.remove "provide_#{@production_provide.provide_id}" %>
+<% if referer_eql? 'factory/admin/taxon/productions', 'provides' %>
+  <%= turbo_stream.remove 'modal' %>
+<% else %>
+  <%= turbo_stream.append 'tbody', partial: 'index_tbody', layout: 'index_tr', locals: { model: @production_provide } %>
+  <%= turbo_stream.remove "provide_#{@production_provide.provide_id}" %>
+<% end %>
