--- a/app/views/factory/admin/production_provides/_new_modal_form.html.erb
+++ b/app/views/factory/admin/production_provides/_new_modal_form.html.erb
@@ -3,6 +3,7 @@
   <section class="modal-card-body">
     <%= render 'error_messages', target: f.object  %>
     <%= f.collection_select :provide_id, @provides, :id, :name %>
+    <%= f.number_field :cost_price %>
   </section>
   <%= f.submit %>
 <% end %>
