--- a/app/views/factory/admin/taxon/productions/_provides/_index_tbody.html.erb
+++ b/app/views/factory/admin/taxon/productions/_provides/_index_tbody.html.erb
@@ -1,5 +1,5 @@
 <td><%= model.name %></td>
-<td class="has-inner-table">
+<td>
   <% model.parts.each do |part| %>
     <%= button_to({ controller: 'productions', action: 'show', product_id: part.product_id, id: part.id }, class: 'tag is-info') do %>
       <span><%= part.name %></span>
@@ -9,11 +9,13 @@
 </td>
 <td class="has-inner-table">
   <table>
-  <% model.production_provides.each do |production_provide| %>
-    <tr>
-      <td><%= production_provide.provide.name %></td>
-      <td><%= production_provide.cost_price %></td>
-    </tr>
-  <% end %>
+    <tbody id="production_<%= model.id %>">
+    <% model.production_provides.each do |production_provide| %>
+      <tr>
+        <td><%= production_provide.provide.name %></td>
+        <td><%= production_provide.cost_price.to_money.format.html_safe %></td>
+      </tr>
+    <% end %>
+    </tbody>
   </table>
 </td>
