--- a/app/views/factory/board/organs/_base/_index_item_actions.html+phone.erb
+++ b/app/views/factory/board/organs/_base/_index_item_actions.html+phone.erb
@@ -1,11 +1,15 @@
-<div class="media">
+<div id="tr_<%= model.id %>" class="media">
   <%= link_to({ controller: '/me/home', auth_token: current_authorized_token.id, **model.admin_url_options(request) }, class: 'media-content') do %>
     <%= yield %>
   <% end %>
   <div class="media-right">
-    <%= button_to({ action: 'bind', id: model.id }, class: 'button is-small is-link') do %>
-      <i class="fa-solid fa-handshake"></i>
-      <span class="ml-1"><%= t('.bind.title') %></span>
+    <% if @provide.provider_id == model.id %>
+      <span>已绑定</span>
+    <% else %>
+      <%= button_to({ action: 'bind', id: model.id }, method: :patch, class: 'button is-small is-link') do %>
+        <i class="fa-solid fa-handshake"></i>
+        <span class="ml-1"><%= t('.bind.title') %></span>
+      <% end %>
     <% end %>
   </div>
 </div>
