--- a/app/views/application/_production.html+phone.erb
+++ b/app/views/application/_production.html+phone.erb
@@ -13,7 +13,7 @@
     <ul class="media-info mt-1">
       <% model.parts.group_by(&->(i){ i.taxon_id }).each do |_, parts| %>
         <% parts.each_with_index do |part, _| %>
-          <li><%= part.name %></li>
+          <li><%= part.title %></li>
         <% end %>
       <% end %>
     </ul>
