--- a/app/views/application/_product.html+phone.erb
+++ b/app/views/application/_product.html+phone.erb
@@ -15,7 +15,7 @@
     <ul class="weui-media-box__info flex-wrap-wrap mt-0">
       <% model.parts.group_by(&->(i){ i.taxon_id }).each do |_, parts| %>
         <% parts.each_with_index do |part, _| %>
-          <li><%= part.name %></li>
+          <li><%= part.title %></li>
         <% end %>
       <% end %>
     </ul>
