--- a/app/views/application/_production.html+phone.erb
+++ b/app/views/application/_production.html+phone.erb
@@ -1,6 +1,6 @@
 <div id="production_<%= model.id %>" data-controller="common" class="media as-boxed">
   <%= link_to({ controller: '/factory/productions', action: 'show', id: model.id }, text: true, class: 'media-left as-logo') do %>
-    <%= image_tag model.product.logo.variant(resize_to_limit: [64, 64]).url, class: 'image is-64x64' if model.product.logo.attached? %>
+    <%= image_tag model.product.logo.variant(resize_to_limit: [64, 64]), class: 'image is-64x64' if model.product.logo.attached? %>
   <% end %>
   <div class="media-content as-body">
     <%= link_to({ controller: '/factory/productions', action: 'show', id: model.id }, text: true, class: 'text-grey-dark') do %>
